--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
 integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 crossorigin="anonymous">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=no, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=false, maximum-scale=1.0" />
     </head>
     <body>
         <div id="root"></div>
