--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=false, maximum-scale=1.0" />
+        <link rel="icon" href="siteicon.png"/>
     </head>
     <body>
         <div id="root"></div>
